# Vanille

./: Cargo.toml  Dockerfile  README.md
config/: vanille.toml
sql/: delivery_reports.sql  queues.sql  user_data.sql
src/: api.rs  config.rs  embeds.rs  main.rs
src/bot/: handler.rs  mod.rs  util.rs
src/commands/: create_queue.rs  delete_queue.rs  edit_queue.rs  mod.rs
src/interactions/: mod.rs
src/interactions/click/: mod.rs  queue.rs  recruit.rs  session.rs  statistics.rs
src/interactions/dropdown/: mod.rs
src/interactions/form/: mod.rs  queue.rs  session.rs  setup.rs  statistics.rs
src/models/: mod.rs  queue.rs  report.rs  session.rs  user_data.rs
src/tasks/: akari.rs  cooldown.rs  mod.rs  reminders.rs
