[package]
name = "vanille"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { version = "0.4.28", features = ["max_level_info", "release_max_level_warn"] }
tokio = { version = "1.48.0", features = ["full"] }
caramel = { path = "./caramel", features = ["akari", "log", "ns-api", "ns-xml"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
lapin = "3.7.2"
itertools = "0.14.0"
serde = "1.0.228"
serenity = { version = "0.12.5", features = [ "utils" ] }
csv = "1.4.0"
poise = "0.6.1"
dotenv = "0.15.0"
config-file = "0.2.3"
rand = "0.9.2"
urlencoding = "2.1.3"
futures = "0.3.31"
dateparser = "0.2.1"
chrono = "0.4.42"
lazy_static = "1.5.0"
regex = "1.12.2"
quick-xml = { version = "0.38.4", features = ["serialize"] }
uuid = { version = "1.19.0", features = ["v4"] }
